--- a/compose.yaml
+++ b/compose.yaml
@@ -62,7 +62,7 @@ services:
           --name "docker-runner" \
           --scope "" \
           --secret "${RUNNER_SECRET}" \
-          --keep-labels; do
+          --labels "ubuntu-latest:docker://ubuntu:24.04,dotnet:docker://mcr.microsoft.com/dotnet/sdk:10.0,node:docker://node:24-bookworm"; do
           echo "Waiting for Forgejo...";
           sleep 5;
         done
@@ -93,8 +93,7 @@ services:
           forgejo-runner create-runner-file \
             --instance "http://server:3000" \
             --name "docker-runner" \
-            --secret "${RUNNER_SECRET}" \
-            --labels "ubuntu-latest:docker://ubuntu:24.04,dotnet:docker://mcr.microsoft.com/dotnet/sdk:10.0,node:docker://node:24-bookworm"
+            --secret "${RUNNER_SECRET}"
         fi &&
         sleep 5 &&
         forgejo-runner daemon
