--- a/.forgejo/workflows/test-node.yaml
+++ b/.forgejo/workflows/test-node.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   hello:
-    runs-on: docker
+    runs-on: node
     steps:
       - name: Checkout
         uses: https://code.forgejo.org/actions/checkout@v4
